--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 ONLINE_AFSPRAKEN_API_KEY=koah57olct71-klaz51
 ONLINE_AFSPRAKEN_API_SECRET=a048b2854f2d3be24fb695d6a8d199568fc96685
+ONLINE_AFSPRAKEN_AGENDA_ID=44523
