--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
-  "name": "documentenboekingssysteem-onlineafspraken",
+  "name": "onlineafspraken-project",
   "version": "1.0.0",
-  "main": "api/onlineafspraken-proxy.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Building...\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "private": true,
   "dependencies": {
-    "axios": "^1.10.0",
-    "crypto-js": "^4.2.0",
-    "xml2js": "^0.6.2"
+    "fast-xml-parser": "^4.4.0"
+  },
+  "scripts": {
+    "start": "vercel dev"
   }
 }
