Fix: Corrected Node.js runtime in vercel.json to node18.x as per Vercel docs

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/Onlineafspraken-proxy.js": {
-      "runtime": "nodejs@18.x"
+      "runtime": "node18.x"
     }
   },
   "routes": [
