Fix: Corrigeer vercel.json met juiste runtime en routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
   "functions": {
-    "api/Onlineafspraken-proxy.js": {
-      "runtime": "node18.x"
+    "api/**/*.js": {
+      "runtime": "@vercel/node"
     }
   },
   "routes": [
     {
       "src": "/api/Onlineafspraken-proxy",
-      "dest": "/api/Onlineafspraken-proxy.js",
-      "methods": ["POST"]
+      "dest": "/api/Onlineafspraken-proxy.js"
     },
     {
       "src": "/(.*)",
