--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,15 @@
     "api/**/*.js": {
       "runtime": "node@20.x"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/Onlineafspraken-proxy",
+      "dest": "/api/Onlineafspraken-proxy.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
